history slider ie overflow fixes

--- a/styles/sass/pages/show.scss
+++ b/styles/sass/pages/show.scss
@@ -145,7 +145,7 @@
     .slider-arrows {
       top: 100%;
       left: auto;
-      right: -12.5vw;
+      right: -16.665%;//-12.5vw;
     }// .slider-arrows
   }// .slider-ui
 
