--- a/styles/style.css
+++ b/styles/style.css
@@ -3979,7 +3979,7 @@ input {
   .history-slider .slider-ui .slider-arrows {
     top: 100%;
     left: auto;
-    right: -12.5vw; }
+    right: -16.665%; }
   .history-slider .text-layer {
     position: absolute;
     width: 50%;
